--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 server {
-  listen 80;
-  server_name prod;
+  listen 6000;
+  server_name ec2-54-225-54-84.compute-1.amazonaws.com;
 
   root /usr/share/nginx/html;
   index index.html;
