Fix: add dockerfile

--- a/.github/workflows/workflows-prod.yml
+++ b/.github/workflows/workflows-prod.yml
@@ -62,7 +62,7 @@ jobs:
     if: ${{ github.ref_name == 'main' }}
     environment: 
       name: prod
-      url: http://ec2-54-225-54-84.compute-1.amazonaws.com/
+      url: http://ec2-54-225-54-84.compute-1.amazonaws.com
     needs: push-build-to-docker
     steps: 
       - name: Déploiement du conteneur Docker via SSH
