--- a/.github/workflows/workflows-prod.yml
+++ b/.github/workflows/workflows-prod.yml
@@ -55,7 +55,7 @@ jobs:
           push: true
           tags: ghcr.io/organisation-de-merge/backoffice-cesizen/backoffice:${{github.ref_name}}
           build-args: |
-            VITE_API_URL=${{ secrets.VITE_API_URL }}
+            VITE_API_URL=${{ vars.VITE_API_URL }}
 
 # ------------------ CD ------------------
 
