--- a/.github/workflows/workflows-prod.yml
+++ b/.github/workflows/workflows-prod.yml
@@ -49,7 +49,7 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Echo pour debug
-        run: echo "VITE_API_URL=${{ secrets.VITE_API_URL }}"
+        run: echo "VITE_API_URL=${{ vars.VITE_API_URL }}"
 
       - name: Build and push de l'image Docker
         uses: docker/build-push-action@v6
