--- a/.github/workflows/workflows-prod.yml
+++ b/.github/workflows/workflows-prod.yml
@@ -58,7 +58,7 @@ jobs:
           push: true
           tags: ghcr.io/organisation-de-merge/backoffice-cesizen/backoffice:${{ github.ref_name }}
           build-args: |
-            VITE_API_URL=${{ vars.VITE_API_URL }}
+            VITE_API_URL=http://ec2-54-225-54-84.compute-1.amazonaws.com:2323
 
 # ------------------ CD ------------------
 
